--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- FIRST SECTION -->
+
+    <section class="first-section flex-container">
+        <div id="box1" class="half-width info">
+            <h1><span class="mark">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>
+                Imagine you don't need a diet because we provide<br>healthy and delicious food for you!
+            </p>
+            <a class="cta" href="https://github.com/hshanto707" target="_blank">Order food</a>
+        </div>
+        <div id="box2" class="half-width"><img src="images/female/Group 8425.png" alt=""></div>
+    </section>
+
+
+
+
+
+    <!-- ABOUT ME SECTION -->
+    <!-- MY RECIPIES SECTION -->
+
+
 </body>
 </html>
