about me section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- FIRST SECTION -->
 
-    <section class="first-section flex-container">
+    <section class="flex-container">
         <div id="box1" class="half-width info">
             <h1><span class="mark">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
@@ -23,11 +23,26 @@
         <div id="box2" class="half-width"><img src="images/female/Group 8425.png" alt=""></div>
     </section>
 
-
-
-
-
     <!-- ABOUT ME SECTION -->
+
+    <section class="about-me flex-container">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>
+                Chef Christine prepares and serves exquisite dinners to parties from two to 200 at your home, business or private catering event. His blend of French-Mediterranean cuisine draws on a lifetime of skills and the knowledge that all meals, no matter how large or how small, are special events among family and friends
+            </p>
+            <a class="cta" href="https://github.com/hshanto707" target="_blank">Contact Me</a>
+        </div>
+    </section>
+
+
+
+
+
+
     <!-- MY RECIPIES SECTION -->
 
 
