my recipies section added

--- a/index.html
+++ b/index.html
@@ -38,12 +38,40 @@
         </div>
     </section>
 
-
-
-
-
-
     <!-- MY RECIPIES SECTION -->
+
+    <section id="my-recipies">
+        <h2>My Recipies</h2>
+        <p>
+            Tired of eating tasteless salad? Don't worry you don't have to eat that<br>always. I post delicious recipies every week. Have a look on some<br>popular recipies.
+        </p>
+        <div class="flex-container">
+            <div class="card">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Cold Entrée Meat</h3>
+                <p>
+                    A very simple recipe if you don't like using or buying a lot of ingredients or cooking stuff. Serve over egg noodles or other dishes.
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Beef Tenderlion</h3>
+                <p>
+                    When we plan lunches for the week, we want  recipes that are easy to  put together, delicious, and of course, healthy.
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Butternut Squash Soup</h3>
+                <p>
+                    This is a thick, rich soup with tons of flavor. Something I whipped up off the top of my head, with things I had on hand. An instant hit at my house.
+
+
+                </p>
+            </div>
+        </div>
+    </section>
+    
 
 
 </body>
