followers tab added

--- a/index.html
+++ b/index.html
@@ -65,10 +65,23 @@
                 <h3>Butternut Squash Soup</h3>
                 <p>
                     This is a thick, rich soup with tons of flavor. Something I whipped up off the top of my head, with things I had on hand. An instant hit at my house.
-
-
                 </p>
             </div>
+        </div>
+    </section>
+
+    <section class="follower-tab flex-container">
+        <div class="box">
+            <h4>700k</h4>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="box">
+            <h4>2.4m</h4>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="box">
+            <h4>100k</h4>
+            <p>Dribble Shot Likes</p>
         </div>
     </section>
     
