--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     </section>
     
 
-
+    <footer>
+        <h3><span class="footer-mark">FOOD</span> NETWORK</h3>
+        <P>Eat healthy to live healthy. Live healthy to live happy.</P>
+    </footer>
 </body>
 </html>
