contact section added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,28 @@
         </div>
     </section>
     
+    <!-- CONTACT ME SECTION -->
+
+    <section id="contact" class="contact">
+        <div class="half-width">
+            <form action="#">
+                <input type="text" name="" id="" placeholder="Enter your name"><br>
+                <input type="email" name="" id="" placeholder="Enter a valid email address"><br>
+                <textarea name="" id="" cols="30" rows="5" placeholder="Write your message here"></textarea><br> 
+                <a class="cta" href="https://github.com/hshanto707" target="_blank">Send Messege</a>
+            </form>
+        </div>
+        <div class="half-width contact-info">
+            <h2>Contact Me</h2>
+            <p>I'm open for any suggestion or just to have a chat</p>
+            <h5>ADDRESS</h5>
+            <P>198 West 21th Street, Suite 721 New York NY 10016</P>
+            <h5>EMAIL</h5>
+            <p>christine@foodnetwork.com</p>
+            <h5>PHONE</h5>
+            <p>+ 1235 2355 98</p>
+        </div>
+    </section>
 
     <footer>
         <h3><span class="footer-mark">FOOD</span> NETWORK</h3>
